# SJSU

./: .gitignore  LICENSE  README.md
CMPE272/: README.md
CMPE272/webApp/: .env.example  readme.md
CMPE272/webApp/app/: User.php
CMPE272/webApp/config/: app.php
CMPE272/webApp/docs/: SJSU.postman_collection.json  SJSU.postman_environment.json
CMPE272/webApp/routes/: api.php  web.php
CMPE275/: README.md
CMPE275/Distributed-System-Project1/: build.xml  runPing.sh  startServerApp.sh
CMPE275/Distributed-System-Project1/proto/: msg_interface.proto  work.proto
CMPE275/Distributed-System-Project1/runtime/: route-1.conf  route-2.conf  route-5.conf
CMPE275/concurrency-2.2.sjsu/: REAME
CMPE275/experimentNetty/: .ant-targets-build.xml  build_pb.sh
CMPE275/experimentNetty/resources/: msg_interface.proto  routing.conf
CMPE275/lab - openmp/: nestingmp.cc
CMPE275/lab - openmp/hello/: README  hello-cout.cpp
CMPE275/lab - openmp/matrix/src/: CMakeLists.txt
CMPE275/lab - openmp/pi-omp/: CMakeLists.txt
CMPE275/lab - openmp/pi-omp/java/: PiCalc.java
CMPE275/lab - openmp/pi-omp/src/: CMakeLists.txt  mp-pi.cpp  mp-pi2.cpp  mp-pi3.cpp
CMPE275/netty-pipe2/.metadata/: version.ini
CMPE275/project1/: .classpath  build_pb.sh  startChatServer.sh
CMPE275/project1/proto/: pipe.proto  work.proto
CMPE275/socket-text/: client.sh
CMPE275/socket-text/conf/: svr.conf
CMPE275/swig-dev/add/: example.c
CMPE275/swig-dev/engine/: build.sh  engine.i
CMPE275/swig-dev/pcre-8.41/: libpcre.la  libpcre.pc  libpcrecpp.pc  libtool  pcre_scanner_unittest  pcre_stringpiece_unittest  pcregrep
CMPE275/swig-dev/pi/: mathish.py
CMPE275/swig-dev/swig-3.0.12/: preinst-swig  swig
CMPE285/: README.md  stockProfitCalculator.py  stockProfitCalculatorWithApi.py
CMPE285/mysite/: .gitignore  db.sqlite3
CMPE285/mysite/mysite/: settings.py  urls.py
CMPE285/mysite/polls/: urls.py  views.py
Distributed-System-Project1/: .classpath  build.xml  build_pb.sh  module_netty-pipe.xml  project1.xml  project1_Fri_Nov_03_14-14-17_PDT_2017.properties  startQueueServer.sh  startServerApp.sh
Distributed-System-Project1/proto/: msg_interface.proto  pipe.proto  work.proto
Distributed-System-Project1/runtime/: route-6.conf
Distributed-System-Project1/src/app/: MessageApp.java  MyConstants.java  QueueServer.java  TestClient.java  WriteClient.java
Distributed-System-Project1/src/client/: CommConnection.java  CommHandler.java  CommInit.java  CommListener.java  CommWorker.java  MessageClient.java  NewUdpClientHandler.java  (+2 more)
Distributed-System-Project1/test/: dbTest.java
experimentNetty/resources/: routing.conf
lab - openmp/: README.lab1  chrono-ex.cpp
lab - openmp/hello/: CMakeLists.txt  hello-omp.cpp  hello-plain.cpp
lab - openmp/matrix/: clean.sh
lab - openmp/pi-omp/: README  clean.sh
lab - openmp/round/: round-ex.cpp
lab - swig/: README
lab - swig/engine/: engine.hpp
lab - swig/pi/: build.sh  clean.sh  mathish.i  pi-omp.cpp
lab -pybind11/: build.sh  example.c
netty-pipe2/: build_pb.sh
project1/: build.xml  build_pb.sh  startChatServer.sh
project1/proto/: common.proto
socket-text/: build.xml
socket-text/docs/: README
swig-dev/: build-swig.sh
swig-dev/add/: build.sh  example.i
swig-dev/engine/: engine.cpp
swig-dev/pcre-8.41/: Makefile  build-pcre.sh  config.h  config.status  libpcre16.pc  libpcre32.pc  libpcrecpp.la  libpcreposix.la  libpcreposix.pc  pcre-config  pcrecpp_unittest  pcretest
swig-dev/pi/: CMakeLists.txt  mathish_wrap.cxx  pi.cpp
swig-dev/swig-3.0.12/: Makefile  config.status
(+331 files in other folders)
